--- a/frontend/src/components/services/appointments/details&history/BookingDetails.scss
+++ b/frontend/src/components/services/appointments/details&history/BookingDetails.scss
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+     flex-wrap: wrap;
     .booking-details-container {
         width: 50vw;
         margin-top: 15rem;
