--- a/frontend/src/components/header/header.scss
+++ b/frontend/src/components/header/header.scss
@@ -7,7 +7,7 @@
 
   .page {
     display: flex;
-    justify-content: center;
+
     align-items: center;
     color: black;
     font-size: 2rem;
@@ -26,17 +26,25 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+      background-color: #5840300f;
+      text-shadow: 2px 2px 5px #584030a4;
+      padding: 5rem;
+      p {
+        margin-top: 1rem;
+      }
     }
     a {
       color: black;
       text-decoration: none;
+      margin-top: 1rem;
       &:hover {
-        color: #584030;
+        color: rgba(255, 255, 255, 0.679);
         transition: color 0.5s ease;
       }
       span {
         position: relative;
         padding-bottom: 5px;
+
         &::before {
           // Pseudo-element for the border animation
           content: "";
@@ -58,12 +66,23 @@
     }
 
     .about {
-      width: 40%;
+      width: 750px;
       height: fit-content;
 
       h3 {
         margin-bottom: 2rem;
+        font-size: 2.5rem;
       }
+    }
+    .service-home {
+      background-color: #58403042;
+
+      margin-left: 5rem;
+    }
+    .product-home {
+      background-color: #58403042;
+
+      margin-left: 5rem;
     }
     // .contact {
     //   display: flex;
@@ -120,18 +139,16 @@
 }
 
 .page2 {
-  background-image: url("../../assets/services-home03.jpg");
+  background-image: url("../../assets/service-home.jpg");
 }
 
 .page3 {
   background-image: url("../../assets/product-home001.jpg");
-  background-position: center;
-  background-repeat: none;
-  background-size: cover;
 }
 
 .page4 {
-  background-image: url("../../assets/about5.jpg");
+  background-image: url("../../assets/about-home.jpg");
+  justify-content: center;
 }
 
 // .page5 {
