--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -1,10 +1,18 @@
+body.menu-open {
+  overflow: hidden; /* Hide scrollbars */
+}
+
+body.menu-open::-webkit-scrollbar {
+  display: none; /* Hide scrollbar for WebKit browsers */
+}
+
 div {
   .navbar {
     position: fixed;
     top: 0;
     right: 0;
     left: 0;
-    background-color: #1c19195a;
+    background-color: #1c19195d;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -27,10 +35,14 @@ div {
       display: flex;
       gap: 10px;
       margin-right: 7px;
+      .cross-icon {
+        margin-left: 3.8rem;
+      }
     }
     .menu-icon svg {
       transition: transform 0.3s ease-in-out;
     }
+
     .cart-ul {
       display: flex;
       gap: 1.2rem;
@@ -56,6 +68,7 @@ div {
           color: #e0ab88;
         }
       }
+
       .cart-li .btn-badge {
         position: absolute;
         top: 0;
