--- a/frontend/src/components/header/header.scss
+++ b/frontend/src/components/header/header.scss
@@ -7,11 +7,12 @@
 
   .page {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+
     align-items: center;
     color: black;
     font-size: 2rem;
+    font-family: serif;
+    font-style: italic;
     position: absolute;
     top: 0;
     left: 0;
@@ -19,6 +20,86 @@
     opacity: 1;
     z-index: 0;
     will-change: auto;
+
+    .inner-page-div {
+      line-height: 3rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      background-color: #5840300f;
+      text-shadow: 2px 2px 5px #584030a4;
+      padding: 5rem;
+      p {
+        margin-top: 1rem;
+      }
+    }
+    a {
+      color: black;
+      text-decoration: none;
+      margin-top: 1rem;
+      &:hover {
+        color: rgba(255, 255, 255, 0.679);
+        transition: color 0.5s ease;
+      }
+      span {
+        position: relative;
+        padding-bottom: 5px;
+
+        &::before {
+          // Pseudo-element for the border animation
+          content: "";
+          position: absolute;
+          bottom: 0;
+          left: 0; // Initial position at left
+          width: 100%; // Initial width 0
+          height: 5px; // Border height
+
+          background-color: #584030; // Border color
+          transition: width 0.5s ease; // Transition effect
+        }
+        &:hover::before {
+          // Change width on hover
+
+          width: 0; // Full width on hover
+        }
+      }
+    }
+
+    .about {
+      width: 750px;
+      height: fit-content;
+
+      h3 {
+        margin-bottom: 2rem;
+        font-size: 2.5rem;
+      }
+    }
+    .service-home {
+      background-color: #58403042;
+
+      margin-left: 5rem;
+    }
+    .product-home {
+      background-color: #58403042;
+
+      margin-left: 5rem;
+    }
+    // .contact {
+    //   display: flex;
+    //   align-items: center;
+    //   h1 {
+    //     margin-bottom: 1rem;
+    //   }
+
+    //   div {
+    //     display: flex;
+    //     gap: 1rem;
+
+    //     .contact-number {
+    //       text-decoration: underline;
+    //     }
+    //   }
+    // }
 
     &.active {
       z-index: 1;
@@ -58,17 +139,18 @@
 }
 
 .page2 {
-  background-image: url("../../assets/1.jpg");
+  background-image: url("../../assets/service-home.jpg");
 }
 
 .page3 {
-  background-image: url("../../assets/2.jpg");
+  background-image: url("../../assets/product-home001.jpg");
 }
 
 .page4 {
-  background-image: url("../../assets/3.jpg");
+  background-image: url("../../assets/about-home.jpg");
+  justify-content: center;
 }
 
-.page5 {
-  background-image: url("../../assets/4.jpg");
-}
+// .page5 {
+//   background-image: url("../../assets/4.jpg");
+// }
