--- a/frontend/src/components/checkout/CheckoutForm.scss
+++ b/frontend/src/components/checkout/CheckoutForm.scss
@@ -1,8 +1,123 @@
+.button {
+  padding: 0.75rem 1rem;
+  border: none;
+  color: white;
+  font-size: 1.125rem;
+  letter-spacing: 1px;
+  font-weight: bold;
+  font-family: serif;
+  font-style: italic;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  transition: all 0.5s ease-in;
+  z-index: 0;
+  display: inline-block;
+  border-radius: 12px;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 0;
+    height: 100%;
+    transform: skew(15deg);
+    transition: all 0.5s;
+    overflow: hidden;
+    z-index: -1;
+  }
+
+  &:hover::before,
+  &:hover::after {
+    width: 58%;
+  }
+
+  &:hover span {
+    color: #0f0206;
+    transition: 0.3s;
+  }
+
+  span {
+    color: #fdf9f6;
+    font-family: serif;
+    font-size: 18px;
+    transition: all 0.3s ease-in;
+  }
+}
+
+.button-confirm::before {
+  left: -12px;
+  background: #e0ac8999;
+}
+
+.button-confirm::after {
+  right: -12px;
+  background: #e0ac8999;
+}
+
+.button-cancel::before {
+  left: -10px;
+  background: rgb(121, 44, 44);
+}
+
+.button-cancel::after {
+  right: -10px;
+  background: rgb(121, 44, 44);
+}
+
+.button-continue {
+  background: linear-gradient(45deg, #49331f, #a8834f);
+  color: #382307;
+
+  &::before {
+    left: -12px;
+    background: linear-gradient(45deg, #1d6021, #62bc85);
+  }
+
+  &::after {
+    right: -12px;
+    background: linear-gradient(45deg, #406435, #499d4b);
+  }
+
+  &:hover {
+    text-transform: uppercase;
+    background: linear-gradient(45deg, #388e3c, #166a1a);
+    color: black;
+    transform: translateY(-2px);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
+  }
+}
+
+.button-clear-cart {
+  background: linear-gradient(45deg, #973b3b, #e27553);
+  color: white;
+  margin-top: 1rem;
+
+  &::before {
+    left: -10px;
+    background: linear-gradient(45deg, #640e07, #d77272);
+  }
+
+  &::after {
+    right: -10px;
+    background: linear-gradient(45deg, #651616, #6a2929);
+  }
+
+  &:hover {
+    text-transform: uppercase;
+    background: linear-gradient(45deg, #671d1d, #c62828);
+    color: black;
+    transform: translateY(-2px);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
+  }
+}
+
+/* Checkout Form Container */
 .checkout-form-container {
-  
-  margin-top: 7rem;
+  margin-top: 2rem;
   padding: 5%;
-  width: 90vw;
+  width: 100vw;
   max-width: 600px;
   max-height: 800px;
   overflow-y: auto;
@@ -20,7 +135,7 @@
   padding-top: 28rem;
   padding-bottom: 5rem;
   box-shadow: 3px 3px 15px -5px #b08568;
-  border-radius: 25px;
+  border-radius:20px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -30,6 +145,7 @@
   &::-webkit-scrollbar {
     display: none;
   }
+
   @media screen and (max-width: 768px) {
     font-size: 1.5rem;
     width: 90%;
@@ -37,7 +153,9 @@
     box-shadow: none;
     border-radius: 0;
   }
+
   label {
+    position: relative;
     display: block;
     margin-bottom: 0.6rem;
     color: white;
@@ -45,6 +163,7 @@
     font-weight: 600;
     cursor: pointer;
   }
+
   input, select {
     width: 100%;
     padding: 9px 12px;
@@ -56,25 +175,27 @@
     background-color: #1c1919;
     color: rgb(236, 220, 207);
     cursor: pointer;
+
     &::placeholder {
       color: #888888;
     }
+
     &:focus {
       border-color: #cdab68;
       outline: none;
       box-shadow: 0 0 0 2px rgba(102, 102, 102, 0.2);
     }
   }
+
   .payment-method {
-    
     padding: 2rem;
     background: transparent;
     margin-bottom: 2rem;
-     box-shadow: 3px 3px 15px -5px #b08568;
     border-radius: 25px;
     margin-top: 2rem;
     display: flex;
     flex-direction: column;
+
     div {
       margin-top: 2rem;
       background-color: #35291d;
@@ -84,12 +205,15 @@
       align-items: center;
       width: 100%;
       flex-wrap: wrap;
+
       input[type="radio"] {
+        width: 16px;
         margin-bottom: -4rem;
         margin-left: 15rem;
         accent-color: #c71010;
         transform: scale(1.6);
       }
+
       label {
         margin-top: 1rem;
         margin-right: 8rem;
@@ -101,64 +225,95 @@
       }
     }
   }
+
   .continue-button {
+    @extend .button;
+    @extend .button-continue;
     width: 100%;
-    padding: 12px;
-    background-color: #066b06;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    font-size: 1rem;
-    font-weight: bold;
-    cursor: pointer;
-    text-transform: uppercase;
     margin-top: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    &:hover {
-      background-color: #29a329;
-      border-radius: 12px;
-    }
   }
 }
+.thank-you-background{
+
+  background-image: url('../../assets/newbackground\ thanku.jpg');
+  background-position: center;
+  width: 100vw;
+  position: fixed;
+  opacity: .9;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  max-width: 100%;
+  height: 80%;
+
+}
+
+/* Thank You Message */
 .thank-you-message {
+  background-image: url('../../assets/top-view-dry-leaves\ \(1\).jpg');
+  background-position: right;
+  margin-top: 85%;
+  // margin-right: 11%;
+  opacity: .6;
+  width: 650px;
+  
+
+  height: 600px;
+  
+  font-size: 1.6rem;
+  position: fixed;
   text-align: center;
   padding: 10%;
-    box-shadow: 3px 3px 15px -5px #b08568;
-  border-radius: 25px;
-  border-radius: 5px;
-    background-color: #1c1919;
+  box-shadow: 9px 3px 15px -1px #4e4733;
+  border-radius: 55px;
+  background-color: #9b8a6f;
   margin-bottom: 100%;
 
   h1 {
-    font-size: 24px;
-    margin-bottom: 2rem;
+    font-size: 45px;
+    margin-top: -8rem;
+    margin-bottom: 1rem;
+
+    color: black;
+    font-weight: bold;
   }
 
   p {
-    font-size: 16px;
-    margin-bottom: 3rem;
+    font-size: 24px;
+    text-align: center;
+    color: rgb(0, 0, 0);
+  line-height: 1.8rem;
+  font-weight: bold;
+
+    margin-bottom: 2rem;
   }
 
   button {
-    padding: 10px;
-    margin-left: 2%;
+    // padding: 10px;
+    width: 15rem;
+    top: 2rem;
+    border-radius: 25%;
+    text-align: center;
     background-color: rgb(88, 54, 21);
-    color: #fff;
+    color: hwb(0 100% 0%);
     border: 2px solid rgb(72, 58, 45);
     border-radius: 5px;
-    font-size: 16px;
+    font-size: 10px;
     cursor: pointer;
     transition: background-color 0.3s ease;
 
     &:hover {
-      background-color: #9e704a;
+      padding: 10px;
+    font-size: 10px;
+
+      width: 15rem;
+      background-color: #cf9a6f;
     }
   }
 }
 
-
 .continue-shopping-button {
-  margin-left: 15%;
+  @extend .button;
   width: 70%;
   letter-spacing: 1px;
   word-spacing: 3px;
@@ -170,22 +325,24 @@
   font-size: 1rem;
   font-weight: bold;
   text-transform: uppercase;
-
   cursor: pointer;
   margin-top: 10px;
   transition: background-color 0.3s ease, border-radius 0.3s ease, transform 0.3s ease;
-  &:hover {
-    font-family: italic;
 
+  &:hover {
     letter-spacing: 1.5px;
-    background-color: #cb9362;
+    background-color: #7b5e44;
     color: black;
-    border-radius: 12px;
+    border-radius: 15px;
     transform: translateY(-2px);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 4px 8px rgba(69, 67, 64, 0.15);
   }
+
   &:active {
     transform: translateY(1px);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
 }
+
+
+  
