--- a/frontend/src/components/login/login.scss
+++ b/frontend/src/components/login/login.scss
@@ -10,34 +10,31 @@
     font-family: serif;
     font-style: italic;
     font-size: 2rem;
-    width: 650px;
+    max-width: 500px;
+    width: 90%;
     padding: 4rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 3rem;
+    gap: 2rem;
     box-shadow: 3px 3px 15px -5px #b08568;
     //box-shadow: 0px 5px 15px -2px rgb(0, 0, 0);
     border-radius: 25px;
-    @media screen and (max-width: 768px) {
-      width: 500px;
-      box-shadow: none;
-      border-radius: 0;
-    }
-
     transition: transform 0.7s ease, opacity 0.7s ease;
     transform-origin: bottom;
     p {
+      font-size: 2rem;
       letter-spacing: 0.2rem;
     }
 
     .login-input {
+      width: 100%;
       background-color: #1c1919;
       color: rgba(255, 255, 255, 0.645);
       border: none;
       outline: none;
-      padding: 20px;
+      padding: 10px;
       font-size: 1rem;
 
       &::placeholder {
@@ -65,7 +62,6 @@
       align-items: center;
       @media screen and (max-width: 768px) {
         flex-direction: column;
-        align-items: center;
       }
       .register {
         color: #b0856885;
@@ -73,17 +69,47 @@
         font-size: 1.2rem;
       }
       .login-button {
-        padding: 8px;
         width: 120px;
+        padding: 8px;
         margin-top: 2rem;
         font-size: 1.2rem;
         background-color: #b08568d3;
         border-radius: 10px;
         border: #b08568 solid 2px;
+        @media screen and (max-width: 768px) {
+          width: 100%;
+        }
         &:hover {
           background-color: #b08568;
           border: #ffffff5e solid 2px;
         }
+      }
+    }
+  }
+  .error-message {
+    display: flex;
+    gap: 1rem;
+    max-width: 500px;
+    width: 90%;
+    margin-bottom: 2rem;
+    text-align: left;
+    box-shadow: 1px 1px 4px #b08568;
+    border-radius: 15px;
+    padding-block: 1rem;
+
+    .error-icon {
+      color: #c53932;
+      font-size: 3.5rem;
+      margin-left: 2rem;
+    }
+    div {
+      span {
+        font-size: 1.5rem;
+        color: #c53932;
+      }
+      p {
+        font-size: 1.2rem;
+        margin-top: 1rem;
       }
     }
   }
