--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -6,7 +6,10 @@ body.menu-open::-webkit-scrollbar {
   display: none; /* Hide scrollbar for WebKit browsers */
 }
 
-div {
+.navbar-container {
+  display: grid;
+  grid-template-columns: 3;
+  grid-template-rows: 2;
   .navbar {
     position: fixed;
     top: 0;
@@ -20,12 +23,13 @@ div {
     font-size: 1.5rem;
     font-family: serif;
     list-style: none;
-    z-index: 1;
     padding-inline: 2rem;
     z-index: 2;
-    @media screen and (max-width: 990px) {
-      z-index: 2;
+    @media screen and (max-width: 768px) {
+      flex-direction: row-reverse;
+      padding-left: 1rem;
     }
+
     img {
       margin-top: 10px;
       width: 80%;
@@ -41,6 +45,9 @@ div {
     }
     .menu-icon svg {
       transition: transform 0.3s ease-in-out;
+    }
+    .cart-ul.hidden {
+      display: none;
     }
 
     .cart-ul {
