added service picture

--- a/frontend/src/components/header/header.scss
+++ b/frontend/src/components/header/header.scss
@@ -139,7 +139,7 @@
 }
 
 .page2 {
-  background-image: url("../../assets/service-home.jpg");
+  background-image: url("../../assets/pedicure2.jpg");
 }
 
 .page3 {
