--- a/frontend/src/components/services/services.scss
+++ b/frontend/src/components/services/services.scss
@@ -7,8 +7,9 @@
 @keyframes fadeInOnce {
   0% {
     opacity: 0;
-    transform: translateY(20px); 
+    transform: translateY(100px); 
   }
+
   100% {
     opacity: 1;
     transform: translateY(0); 
@@ -64,8 +65,12 @@ letter-spacing: 1rem;
       height: 60vh;
       width: 60vw;
       margin-right: -5rem;
-      @media screen and (max-width: 1080px) {
-        width: 100vw;
+      @media screen and (max-width: 1280px) {
+        width: 100%;
+        height: 50vh;
+      }
+      @media screen and (max-width: 990px) {
+        width: 80vw;
         height: 50vh;
       }
     }
@@ -73,7 +78,7 @@ letter-spacing: 1rem;
       z-index: 0;
       height: 60vh;
       width: 60vw;
-      @media screen and (max-width: 1080px) {
+      @media screen and (max-width: 1280px) {
   width: 100%;
   height: 50vh;
       }
@@ -90,7 +95,7 @@ letter-spacing: 1rem;
   // animation: fadeInOnce 2s both;
   // animation-delay:3s ;
   &.fadeInOnce {
-    animation: fadeInOnce 2s forwards;
+    animation: fadeInOnce 1s forwards;
   }
   @media screen and (max-width: 1280px) {
     width: 90vw;
