Redesigned checkout and thank you pages, added loader to payment

--- a/frontend/src/components/header/header.scss
+++ b/frontend/src/components/header/header.scss
@@ -143,7 +143,7 @@
 }
 
 .page3 {
-  background-image: url("../../assets/product-home001.jpg");
+  background-image: url("../../assets/woman-doing-her-selfcare-ritual\ \(2\).jpg");
 }
 
 .page4 {
