--- a/frontend/src/components/checkout/CheckoutForm.scss
+++ b/frontend/src/components/checkout/CheckoutForm.scss
@@ -1,6 +1,5 @@
 .checkout-form-container {
   background-image: url('../../assets/thankyou-page.jpg');
-  padding: 20rem 0;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100vw;
@@ -10,7 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: calc(100vh - 40rem); 
+  height: 100vh; /* Full height for the container */
   margin-top: 10rem;
   margin-bottom: 10rem;
 }
@@ -23,7 +22,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  max-width: 1200px;
+  max-width: 1200px; /* Add a max-width to improve layout on large screens */
 }
 
 .form-section,
@@ -154,8 +153,10 @@ select {
   color: #fff;
   max-width: 600px;
   width: 100%;
-  margin-top: 10rem; 
-  margin-bottom: 10rem;
+  margin-top: 10rem; /* Add top margin */
+  margin-bottom: 10rem; /* Add bottom margin */
+  margin-left: 2rem; /* Add left margin */
+  margin-right: 2rem; /* Add right margin */
 }
 
 .continue-shopping-button {
@@ -223,7 +224,7 @@ select {
 /* Media Queries for Responsiveness */
 @media (max-width: 768px) {
   .checkout-form-container {
-    padding: 10rem 0;
+    padding: 10rem 2rem;
     height: auto; /* Let the content determine the height */
     margin-top: 5rem;
     margin-bottom: 5rem;
@@ -247,7 +248,7 @@ select {
 
 @media (max-width: 480px) {
   .checkout-form-container {
-    padding: 5rem 0;
+    padding: 5rem 2rem;
     margin-top: 3rem;
     margin-bottom: 3rem;
   }
