--- a/frontend/src/components/services/appointments/Appointments.scss
+++ b/frontend/src/components/services/appointments/Appointments.scss
@@ -142,7 +142,10 @@
       }
       .popup-container {
         position: relative;
+        margin-top: 1rem;
         .popup {
+          display: flex;
+
           position: absolute;
           top: calc(100% + 10px); /* Adjust the distance from the dropdown */
           left: 0;
@@ -150,7 +153,7 @@
           font-size: 1.2rem;
           border: 1px solid #b08568;
           padding: 10px;
-          color: #fdf9f6;
+          color: #cfcbc8;
           border-radius: 4px;
           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
           p {
@@ -160,6 +163,9 @@
         }
         .popup-content {
           display: flex;
+          align-items: center;
+          justify-content: space-between;
+          width: 100%;
         }
       }
     }
@@ -259,32 +265,52 @@
 }
 .submit-button {
   width: 70%;
-  margin-top: 2.5rem;
+  margin-top: 4.5rem;
   text-align: end;
+  position: relative; /* Ensure relative positioning for containing pseudo-elements */
+
   @media screen and (max-width: 1080px) {
-    // margin-top: 3rem;
     width: 15rem;
     align-items: center;
   }
 
   button {
+    position: relative; /* Ensure relative positioning for pseudo-elements */
     background-color: transparent;
     border: none;
     font-size: 1.5rem;
     font-style: italic;
     color: #b08568;
-    border-bottom: solid 4px #b08568;
     text-align: start;
     width: 8rem;
     margin: 2rem;
     padding: 1px;
+    transition: transform 0.3s, font-size 0.3s;
+    cursor: pointer;
+
     @media screen and (max-width: 1080px) {
       margin: 1rem;
     }
-  }
-  button:hover {
-    font-size: 1.6rem;
-    border: none;
+
+    &::before {
+      content: "";
+      position: absolute;
+      bottom: -2px;
+      left: 0;
+      width: 100%;
+      height: 4px;
+      background-color: #b08568;
+      transition: width 0.5s ease;
+    }
+
+    &:hover::before {
+      width: 0%;
+    }
+
+    &:hover {
+      transform: scale(1.05);
+      font-size: 1.5rem;
+    }
   }
 }
 
@@ -325,22 +351,22 @@
   }
 
   .submitted-data {
-  h4{
-    color: #b08568;
-    font-size: 1.2rem;
-  }
- 
-.display-data{
-  width: 90%;
-  // .number{
+    h4 {
+      color: #b08568;
+      font-size: 1.2rem;
+    }
 
-  //   display: flex;
-  //   justify-content: space-between;
-  // }
-  @media screen and (max-width: 1080px) {
-    width: 50%;
-  }
-}
+    .display-data {
+      width: 90%;
+      // .number{
+
+      //   display: flex;
+      //   justify-content: space-between;
+      // }
+      @media screen and (max-width: 1080px) {
+        width: 50%;
+      }
+    }
     margin: 1rem;
     p {
       font-size: 1.2em;
