--- a/frontend/src/components/services/services.scss
+++ b/frontend/src/components/services/services.scss
@@ -1,17 +1,11 @@
-// .completebody{
-//   overflow-y: auto;
-//   scrollbar-width: thin;
-//     scrollbar-color: #b08568 #1c1919;
-
-// }
 @keyframes fadeInOnce {
   0% {
     opacity: 0;
-    transform: translateY(20px); 
+    transform: translateY(20px);
   }
   100% {
     opacity: 1;
-    transform: translateY(0); 
+    transform: translateY(0);
   }
 }
 
@@ -30,10 +24,9 @@
     justify-content: flex-end;
     text-align: justify;
     @media screen and (max-width: 990px) {
-    
-    width: 85%;
+      width: 85%;
       margin-left: -1rem;
-            }
+    }
     .header-p {
       margin-left: 5rem;
       position: absolute;
@@ -44,10 +37,9 @@
       letter-spacing: normal;
       font-size: 1.5rem;
       @media screen and (max-width: 990px) {
-width: 50%;
-font-size: 1.1rem;
-margin-left: 0;
-
+        width: 50%;
+        font-size: 1.1rem;
+        margin-left: 0;
       }
       h1 {
         letter-spacing: 1.8rem;
@@ -55,8 +47,8 @@ margin-left: 0;
         text-align: center;
         padding: 2rem;
         @media screen and (max-width: 1010px) {
-font-size: 2rem;
-letter-spacing: 1rem;
+          font-size: 2rem;
+          letter-spacing: 1rem;
         }
       }
     }
@@ -64,8 +56,12 @@ letter-spacing: 1rem;
       height: 60vh;
       width: 60vw;
       margin-right: -5rem;
-      @media screen and (max-width: 1080px) {
-        width: 100vw;
+      @media screen and (max-width: 1280px) {
+        width: 100%;
+        height: 50vh;
+      }
+      @media screen and (max-width: 990px) {
+        width: 80vw;
         height: 50vh;
       }
     }
@@ -73,13 +69,12 @@ letter-spacing: 1rem;
       z-index: 0;
       height: 60vh;
       width: 60vw;
-      @media screen and (max-width: 1080px) {
-  width: 100%;
-  height: 50vh;
+      @media screen and (max-width: 1280px) {
+        width: 100%;
+        height: 50vh;
       }
     }
   }
-
 }
 
 .content-body {
@@ -87,20 +82,17 @@ letter-spacing: 1rem;
   height: 100vh;
   padding-left: 10rem;
   background-color: #1c1919;
-  // animation: fadeInOnce 2s both;
-  // animation-delay:3s ;
   &.fadeInOnce {
-    animation: fadeInOnce 2s forwards;
+    animation: fadeInOnce 2s both;
   }
-  @media screen and (max-width: 1280px) {
-    width: 90vw;
-padding-left: 0;
-.dash-p{
-  display: none;
-}
-h2{
-  border-top: none;
-}
+  @media screen and (max-width: 1180px) {
+    padding-left: 0;
+    .dash-p {
+      display: none;
+    }
+    h2 {
+      border-top: none;
+    }
   }
   h2 {
     font-size: 3.5rem;
@@ -111,52 +103,71 @@ h2{
     padding: 2rem;
     padding-left: 5rem;
     @media screen and (max-width: 1200px) {
-font-size: 2rem;
+      font-size: 2rem;
     }
   }
   .service-item {
-    .service-description{
+    .service-description {
       width: 60%;
     }
     padding: 2rem;
     @media screen and (max-width: 1200px) {
-font-size: 12px;
+      font-size: 12px;
     }
     .service-content {
       display: flex;
       gap: 1rem;
       padding-top: 1rem;
-     
     }
   }
-  .service-button-div{
-width: 5vw;
-text-align: end;
- button{
+  .service-button-div {
+    width: 70%;
+    margin-top: 4.5rem;
+    text-align: end;
+    position: relative; /* Ensure relative positioning for containing pseudo-elements */
+  
+    @media screen and (max-width: 1080px) {
+      width: 15rem;
+      align-items: center;
+    }
+  
+    button {
+      position: relative; /* Ensure relative positioning for pseudo-elements */
       background-color: transparent;
       border: none;
       font-size: 1.5rem;
       font-style: italic;
-      color: #B08568;
-      // font-weight: bolder;
-      // text-decoration: underline solid 5px ;
-      border-bottom: solid 4px  #B08568;
+      color: #b08568;
       text-align: start;
-      width:10rem;
+      width: 8rem;
       margin: 2rem;
       padding: 1px;
-      cursor: pointer;
-    }
-    button:hover{
-      // font-size: 1.6rem;
-      border: none;
-    }
-    service-button-div button:active {
-      scroll-behavior: smooth; /* Add smooth scroll behavior when button is clicked */
+      transition: transform 0.3s, font-size 0.3s;
+  cursor: pointer;
+  
+      @media screen and (max-width: 1080px) {
+        margin: 1rem;
+      }
+  
+      &::before {
+        content: "";
+        position: absolute;
+        bottom: -2px; 
+        left: 0;
+        width: 100%; 
+        height: 4px; 
+        background-color: #b08568;
+        transition: width 0.5s ease; 
+      }
+  
+      &:hover::before {
+        width: 0%; 
+      }
+  
+      &:hover {
+        transform: scale(1.05);
+        font-size: 1.5rem; 
+      }
     }
   }
-
 }
-// .content-body:focus-visible{
-
-// }
