--- a/frontend/src/components/services/appointments/Appointments.scss
+++ b/frontend/src/components/services/appointments/Appointments.scss
@@ -371,6 +371,7 @@
     p {
       font-size: 1.2em;
       color: #fbe2d1;
+      margin-bottom: 0;
       span {
         color: #bd7646;
         font-weight: bolder;
