--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -31,13 +31,17 @@ body.menu-open::-webkit-scrollbar {
     }
 
     img {
-      margin-top: 10px;
+      // margin-top: 10px;
       width: 80%;
       max-width: 10rem;
     }
+    ul{
+      margin-bottom: 0;
+    }
     .menu-icon {
-      
       display: flex;
+      justify-content: center;
+      align-items: center;
       gap: 10px;
       margin-right: 7px;
       .cross-icon {
@@ -55,8 +59,11 @@ body.menu-open::-webkit-scrollbar {
 
     .cart-ul {
       display: flex;
+      margin: 0;
+      // width: 10%;
+      align-items: center;
       gap: 1.2rem;
-
+justify-content: space-around;
       a:-webkit-any-link {
         text-decoration: none;
       }
@@ -83,7 +90,7 @@ body.menu-open::-webkit-scrollbar {
       .cart-li .btn-badge {
         position: absolute;
         top: 0;
-        right: 4.3rem;
+        right: 4.2rem;
         background-color: var(--black);
         color: var(--white);
         font-size: 1.2rem;
@@ -99,6 +106,15 @@ body.menu-open::-webkit-scrollbar {
     }
   }
 }
+.dropdown-menu.show{
+  border: #8a654c solid 2px;
+}
+.dropdown-item:hover{
+ background-color:#e0ab88;
+}
+.dropdown-item:active{
+  background-color: #e0ab88;
+ }
 .dropdown-toggle::after {
   cursor: pointer;
   display: none;
