--- a/frontend/src/components/services/appointments/details&history/ConfirmedBooking.scss
+++ b/frontend/src/components/services/appointments/details&history/ConfirmedBooking.scss
@@ -62,7 +62,9 @@
         gap: 15px;
         align-items: flex-start;
         margin-bottom: 10px;
-      
+      p{
+        margin: 0;
+      }
     }
 
   }
