--- a/frontend/src/components/header/header.scss
+++ b/frontend/src/components/header/header.scss
@@ -1,4 +1,3 @@
-// Component-specific styles
 .hero {
   position: relative;
   overflow: hidden;
@@ -7,10 +6,8 @@
 
   .page {
     display: flex;
-
     align-items: center;
     color: black;
-    font-size: 2rem;
     font-family: serif;
     font-style: italic;
     position: absolute;
@@ -26,24 +23,37 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      background-color: #5840300f;
-      text-shadow: 2px 2px 5px #584030a4;
+      background-color: #58403042;
       padding: 5rem;
+      @media screen and (max-width: 768px) {
+        line-height: 2rem;
+        padding: 3rem;
+      }
       p {
         margin-top: 1rem;
+        font-size: 1.8rem;
+        @media screen and (max-width: 768px) {
+          font-size: 1.2rem;
+          line-height: 2rem;
+        }
       }
     }
     a {
-      color: black;
       text-decoration: none;
       margin-top: 1rem;
-      &:hover {
-        color: rgba(255, 255, 255, 0.679);
-        transition: color 0.5s ease;
-      }
+
       span {
         position: relative;
         padding-bottom: 5px;
+        color: black;
+        font-size: 2rem;
+        @media screen and (max-width: 768px) {
+          font-size: 1.8rem;
+        }
+        &:hover {
+          color: rgba(255, 255, 255, 0.679);
+          transition: color 0.5s ease;
+        }
 
         &::before {
           // Pseudo-element for the border animation
@@ -66,48 +76,25 @@
     }
 
     .about {
-      width: 750px;
+      max-width: 750px;
+      width: 90%;
       height: fit-content;
-
+      margin-left: 5rem;
+      background-color: #58403057;
       h3 {
-        margin-bottom: 2rem;
         font-size: 2.5rem;
+
+        @media screen and (max-width: 768px) {
+          font-size: 1.8rem;
+        }
       }
     }
-    .service-home {
-      background-color: #58403042;
-
-      margin-left: 5rem;
-    }
-    .product-home {
-      background-color: #58403042;
-
-      margin-left: 5rem;
-    }
-    // .contact {
-    //   display: flex;
-    //   align-items: center;
-    //   h1 {
-    //     margin-bottom: 1rem;
-    //   }
-
-    //   div {
-    //     display: flex;
-    //     gap: 1rem;
-
-    //     .contact-number {
-    //       text-decoration: underline;
-    //     }
-    //   }
-    // }
-
     &.active {
       z-index: 1;
       visibility: visible;
       transform: translateY(0);
       transition: transform ease-out 2s;
     }
-
     &.inactive {
       z-index: 0;
       visibility: hidden;
@@ -116,14 +103,12 @@
     }
   }
 }
-
 .page-container {
   height: 100vh;
   width: 100%;
   position: relative;
   overflow: hidden;
 }
-
 .page {
   background-position: center;
   background-repeat: no-repeat;
@@ -148,7 +133,6 @@
 
 .page4 {
   background-image: url("../../assets/about-home.jpg");
-  justify-content: center;
 }
 
 // .page5 {
