Ya appointment service (#41)
* working

* working

* Adding auto Email-generator

* working on email

* working on booking calendar

* working

* working on calendar and scrollbar

* working

* working on functionalltiy

* services functionally working

* added service picture

* commit

* working

* completed popup error and design

* completed popup error message andanimation

* making navbar responsive

* fixed positions

--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -43,6 +43,9 @@ body.menu-open::-webkit-scrollbar {
     ul{
       margin-bottom: 0;
     }
+    ul{
+      margin-bottom: 0;
+    }
     .menu-icon {
       display: flex;
       justify-content: center;
