--- a/frontend/src/components/cart/Cart.scss
+++ b/frontend/src/components/cart/Cart.scss
@@ -82,20 +82,16 @@
     border-bottom: 1px solid #f7bd84;
     line-height: 1.3em;
     padding-bottom: 0.5rem;
-  }
 
-  @media (max-width: 1200px) {
-    h1 {
+    @media (max-width: 1200px) {
       font-size: 2rem;
     }
-  }
 
-  @media (max-width: 992px) {
-    margin: 1rem 0;
-  }
+    @media (max-width: 992px) {
+      margin: 1rem 0;
+    }
 
-  @media (max-width: 576px) {
-    h1 {
+    @media (max-width: 576px) {
       font-size: 1.5rem;
     }
   }
@@ -367,14 +363,11 @@
         transform: none;
       }
     }
-  
-
-    @media (max-width: 576px) {
-      width: 100%;
-    }
   }
 
   @media (max-width: 576px) {
+    width: 100%;
     padding: 1rem;
+    order: 2; /* Move order summary below cart items */
   }
 }
