--- a/frontend/src/components/logout/logout.scss
+++ b/frontend/src/components/logout/logout.scss
@@ -27,7 +27,7 @@
     p {
       background-color: #32251d6b;
       font-size: 1.5rem;
-      padding: 0.5rem;
+      padding: 0.5rem 1rem;
     }
     .logout-buttons {
       display: flex;
@@ -71,7 +71,7 @@
         span {
           color: #fdf9f6;
           font-family: serif;
-          font-size: 18px;
+          font-size: 1.6rem;
           transition: all 0.3s ease-in;
         }
       }
