--- a/frontend/src/components/header/header.scss
+++ b/frontend/src/components/header/header.scss
@@ -23,7 +23,6 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      background-color: #58403042;
       padding: 5rem;
       @media screen and (max-width: 768px) {
         line-height: 2rem;
@@ -81,6 +80,12 @@
       height: fit-content;
       margin-left: 5rem;
       background-color: #58403057;
+
+      h1 {
+        color: white;
+        width: fit-content;
+        border-bottom: white solid 2px;
+      }
       h3 {
         font-size: 2.5rem;
 
@@ -135,6 +140,7 @@
   background-image: url("../../assets/about-home.jpg");
 }
 
-// .page5 {
-//   background-image: url("../../assets/4.jpg");
-// }
+.page5 {
+  background-image: url("../../assets/contct-home03.jpg");
+  background-position: top;
+}
