--- a/frontend/src/components/register/register.scss
+++ b/frontend/src/components/register/register.scss
@@ -41,7 +41,7 @@
     font-style: italic;
     font-size: 2rem;
     width: 650px;
-    padding: 1rem 3rem;
+    padding: 4rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -73,6 +73,7 @@
       outline: none;
       padding: 20px;
       color: white;
+      margin-bottom: 0;
 
       &::placeholder {
         color: white;
