--- a/frontend/src/components/logout/logout.scss
+++ b/frontend/src/components/logout/logout.scss
@@ -12,6 +12,8 @@
     display: flex;
     flex-direction: column;
     gap: 3rem;
+    max-width: 600px;
+    width: 90%;
     box-shadow: 3px 3px 15px -5px #b08568;
     border-radius: 25px;
     @media screen and (max-width: 768px) {
