--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -31,6 +31,7 @@ body.menu-open::-webkit-scrollbar {
       width: 80%;
       max-width: 10rem;
 
+      
       @media screen and (max-width: 768px) {
         display: none;
       }
@@ -41,6 +42,10 @@ body.menu-open::-webkit-scrollbar {
       display: flex;
       align-items: center;
     }
+    
+    ul{
+      margin-bottom: 0;
+  }
 
     .menu-icon {
       display: flex;
